[package]
name = "batch_edit_file"
version = "0.1.0"
edition = "2021"
authors = ["zhenghan <zhenghan@zhenghan.icu>"]
description = "use to batch change file names"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
clap = { version = "4.0.23",features=["derive"]}
